--- a/src/app/components/crud/role-managements/role-management/role-management.component.html
+++ b/src/app/components/crud/role-managements/role-management/role-management.component.html
@@ -14,7 +14,7 @@
               <th>Display Name</th>
               <th>Description</th>
               <th>Permission assignment</th>
-              <th>Assign Role</th>
+              <th>Permission</th>
               <th class="text-center">Action</th>
             </tr>
           </thead>
@@ -24,9 +24,7 @@
               <td>{{ role.display_name }}</td>
               <td>{{ role.description }}</td>
               <td>
-                <div *ngFor="let role_permission of role.permissions">
-                  {{ role_permission.name }}
-                </div>
+                <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal" (click)="onPermission(role.permissions)">View Permission (Count: {{ role.permissions_count }})</button>
               </td>
               <td>
                 <form [formGroup]="role_management_form">
@@ -38,9 +36,6 @@
                 </form>
               </td>
               <td class="text-center">
-                <a class="btn" (click)="onEdit(role)">
-                  <i class="fa fa-pencil-square-o"></i>
-                </a>
                 <a class="btn text-danger" (click)="onDelete(role)">
                   <i class="fa fa-trash-o"></i>
                 </a>
@@ -53,5 +48,30 @@
       </div>
       <!-- /.card-body -->
     </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">View Permission</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <div *ngFor="let role_permission of permissionsList_id">
+          {{ role_permission.name }}
+          <a class="btn text-danger" (click)="onPermissionDelete(role_permission)" data-dismiss="modal">
+            <i class="fa fa-trash-o"></i>
+          </a>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
   </div>
 </div>
